fixed some newInstance() warnings .. by adding .getDeclaredConstructor()